overlays/production/home-assistant/middleware-real-ip.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: real-ip
  namespace: home-assistant
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.0.0/16
      - 10.42.0.0/16
